fixed text alignment

--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ figure.main-image {
   margin-bottom: 32px;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
 }
 
 figure.section-image {
@@ -118,7 +119,8 @@ header nav ul {
  }
 
  footer nav ul li a {
-  color: #ffffff;
+  color:#0b5f1a;
+
  }
 
  footer nav ul li a:hover {
